2017-07-20  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Show statistics for selected transactions (if more than one is selected)

2017-07-07  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Batch editing of date and payee/payer of split transactions
	* CSV import dialog layout fixes
	* Fix import of expenses from CSV files with separate columns for cost and income

2017-07-05  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix reading of negative values and values beginning with decimal separator during CSV import
	* Fix the CSV import date/number format dialog
	* Fix import of expenses when importing all types of transactions from CSV file
	* Fix reading of year with less than four digits in CSV or QIF file

2017-06-25  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Remove blank space at beginning and end of payee/payer, comments, etc.

2017-06-01  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix payee lost when split transaction copied (affects scheduled split transactions)

2017-05-21  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix account list html export (and print preview)

2017-04-25  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Italicize scheduled transactions in expenses, incomes and transactions lists

2017-04-07  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Security transactions enhancements and fixes

2017-04-02  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Account drag and drop fixes

2017-03-23  Hanna Knutsson <hanna.knutsson@protonmail.com>	

	* Import/merge Eqonomize! files

2017-03-21  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add timestamp property for transactions to be able to consistently sort transactions in the order they were added

2017-03-21  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Artithmetic expression and currency conversion in input fields (spin boxes)
	* Currency converter
	* "Associated file" transaction property
