@@ -1,3 +1,7 @@
+2017-07-21  Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Support for parentheses for calculation in input fields
+
 2017-07-20  Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Show statistics for selected transactions (if more than one is selected)
